--- a/configs/.editorconfig
+++ b/configs/.editorconfig
@@ -7,10 +7,10 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{c,cpp,cs,js,jsx,py}]
+[*.{c,cpp,cs,go,js,jsx,py}]
 indent_size = 4
 
-[*.{clj,coffee,css,html,jade,json,lisp,raml,rb,rkt,rtks,sass,scss,scm}]
+[*.{clj,coffee,css,hbs,html,jade,json,lisp,raml,rb,rkt,rtks,sass,scss,scm}]
 indent_size = 2
 
 [*.go]
