more tweaking, less twerking

--- a/configs/.editorconfig
+++ b/configs/.editorconfig
@@ -3,14 +3,13 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{c,cpp,cs,go,py}]
+[*.{c,cpp,cs,go,hs,py}]
 indent_size = 4
 
-[*.{clj,coffee,css,es6,hbs,hh,html,jade,js,json,jsx,lisp,php,raml,rb,rkt,rtks,sass,scss,scm}]
+[*.{clj,coffee,css,es6,hbs,hh,html,jade,js,json,jsx,lisp,php,raml,rb,rkt,rtks,sass,scm,scss}]
 indent_size = 2
 
 [*.go]
