--- a/configs/.editorconfig
+++ b/configs/.editorconfig
@@ -6,14 +6,14 @@ indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{c,cpp,cs,go,hs,py}]
+[*.{c,cpp,cs,cshtml,go,hs,py}]
 indent_size = 4
 
-[*.{clj,coffee,css,es6,hbs,hh,html,jade,js,json,jsx,lisp,php,raml,rb,rkt,rtks,sass,scm,scss,swift}]
+[*.{clj,css,hbs,hh,html,jade,js,json,less,lisp,php,raml,rb,rkt,rtks,sass,scm,scss,swift}]
 indent_size = 2
 
 [*.go]
 indent_style = tab
 
-[*.py]
-insert_final_newline=false
+[Makefile]
+indent_style = tab
