updating vim and tmux configs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,9 @@
 set -g default-terminal "screen-256color"
-#set -g prefix C-a
-#unbind C-b
-set -sg escape-time 1
+# make tmux more responsive
+set -s escape-time 1
+set -g mouse on
 
+# simple profile reloading
 bind r source-file ~/.tmux.conf \; display "reloaded"
 bind C-b send-prefix
 
@@ -16,6 +17,10 @@ setw -g window-status-current-bg colour2
 bind | split-window -h
 bind - split-window -v
 
+#quick window selection
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
 # cycle panes like vim
 bind h select-pane -L
 bind j select-pane -D
@@ -23,7 +28,8 @@ bind k select-pane -U
 bind l select-pane -R
 
 # worked so good, let's use it for resizing
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
