--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,23 +13,14 @@ setw -g window-status-current-attr bright
 setw -g window-status-current-fg white
 setw -g window-status-current-bg colour2
 
-# make splits more intuitive
-bind | split-window -h
-bind - split-window -v
+# autosave/restore sessions
+set -g @continuum-restore 'on'
 
-#quick window selection
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# cycle panes like vim
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# worked so good, let's use it for resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+run -b '~/.tmux/plugins/tpm/tpm'
 
