--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+
 # make tmux more responsive
 set -s escape-time 1
 set -g mouse on
@@ -13,14 +14,15 @@ setw -g window-status-current-attr bright
 setw -g window-status-current-fg white
 setw -g window-status-current-bg colour2
 
-# autosave/restore sessions
-set -g @continuum-restore 'on'
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'sei40kr/tmux-airline-dracula'
 
+# rise from your grave
+set -g @resurrect-save-bash-history 'on'
+
+# Initialize package manager
 run -b '~/.tmux/plugins/tpm/tpm'
 
