--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,13 +9,12 @@ bind r source-file ~/.tmux.conf \; display "reloaded"
 bind C-b send-prefix
 
 # make windows list easier on the augen
-setw -g window-status-attr dim
-setw -g window-status-current-attr bright
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour2
+setw -g window-status-style dim
+setw -g window-status-current-style bright,fg=white,bg=colour2
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'sei40kr/tmux-airline-dracula'
@@ -25,4 +24,3 @@ set -g @resurrect-save-bash-history 'on'
 
 # Initialize package manager
 run -b '~/.tmux/plugins/tpm/tpm'
-
